# job_hunt_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
db/: chroma.sqlite3
src/job_app/: crew.py  main.py
src/job_app/config/: agents.yaml  tasks.yaml
src/job_app/tools/: send_email.py
