[project]
name = "job_app"
version = "0.1.0"
description = "job_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "browserbase>=1.4.0",
    "crewai[tools]>=0.119.0,<1.0.0",
    "google-api-python-client>=2.176.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain-apify>=0.1.2",
    "multion>=1.3.8",
]

[project.scripts]
job_app = "job_app.main:run"
run_crew = "job_app.main:run"
train = "job_app.main:train"
replay = "job_app.main:replay"
test = "job_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
